Fix text overflow on navbox

--- a/style.css
+++ b/style.css
@@ -2427,7 +2427,7 @@ ul[id="shortcuts"] {
       display: -webkit-box;
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
-      max-height: 90px;
+      max-height: 80px;
       -webkit-transition: 0.5s ease all;
       -o-transition: 0.5s ease all;
       transition: 0.5s ease all;
